增加說明+產品

--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
         <img src="./img/slick3.jpg" alt="手機">
     </div>
 
+    <div id="about">
+        <img src="./img/about.png" alt="關於">
+        <div>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi neque placeat exercitationem modi, vero repellat.</p>
+        </div>
+    </div>
+
+    <div id="product">
+        <img src="./img/about.png" alt="產品">
+        <div>
+            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi neque placeat exercitationem modi, vero repellat.</p>
+        </div>
+    </div>
+
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
     <script src="./node_modules/aos/dist/aos.js"></script>
