增加產品列

--- a/index.html
+++ b/index.html
@@ -38,6 +38,21 @@
         </div>
     </div>
 
+    <div id="brand">
+        <img src="./img/facebook.png" alt="facebook">
+        <img src="./img/github.png" alt="github">
+        <img src="./img/printerest.png" alt="printerest">
+        <img src="./img/reddit.png" alt="reddit">
+        <img src="./img/skype.png" alt="skype">
+        <img src="./img/twitter.png" alt="twitter">
+        <img src="./img/whatsapp.png" alt="whatsapp">
+        <img src="./img/youtube.png" alt="youtube">
+    </div>
+
+    <footer>
+        <p>&copy;Dent All right reserved</p>
+    </footer>
+
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/slick-carousel/slick/slick.min.js"></script>
     <script src="./node_modules/aos/dist/aos.js"></script>
