--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick.css">
     <link rel="stylesheet" href="./node_modules/slick-carousel/slick/slick-theme.css">
     <link rel="stylesheet" href="./node_modules/aos/dist/aos.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <nav>
         <div id="logo">3C 專賣店</div>
+        <div></div>
         <a href="#">首頁</a>
         <a href="#">產品</a>
     </nav>
