--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div id="about">
-        <img src="./img/about.png" alt="關於">
+        <img src="./img/about.png" alt="關於" data-aos="fade-right">
         <div>
             <h1>Lorem ipsum dolor sit amet consectetur.</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi neque placeat exercitationem modi, vero repellat.</p>
@@ -33,7 +33,7 @@
     </div>
 
     <div id="product">
-        <img src="./img/about.png" alt="產品">
+        <img src="./img/about.png" alt="產品" data-aos="fade-left">
         <div>
             <h1>Lorem ipsum dolor sit amet consectetur.</h1>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi neque placeat exercitationem modi, vero repellat.</p>
